Cleaned up code and comments, added responsive mixin, fixed bullet alignment(at least for Figtree font, using line height), renamed wrappers to better align with BEM

--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -7,3 +7,22 @@
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
+
+$breakpoints: (
+    "lg": 992px,
+    "xl": 1200px,
+    "xxl": 1400px
+) !default;
+
+// Mixin to manage responsive breakpoints
+@mixin this-and-above($breakpoint) {
+    @if map-has-key($breakpoints, $breakpoint) {
+        // Prints a media query based on the value
+        @media (min-width: map-get($breakpoints, $breakpoint)) {
+            @content;
+        }
+    } @else {
+        @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
+          + "Available breakpoints are: #{map-keys($breakpoints)}.";
+    }
+}
